# chorus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build-wasm.sh  deny.toml  semver_release_checks.yml
.github/workflows/: build-test-coverage.yml  build_and_test.yml  cargo-doc.yml  clippy.yml  code_quality.yml  license-header.yml  rust-clippy.yml  rust.yml  semver-checks.yml
chorus/: .rusty-hook.toml  Cargo.toml
chorus-macros/: Cargo.toml
chorus-macros/src/: lib.rs
chorus-postgres/: Cargo.toml
chorus-postgres/src/: lib.rs
chorus-postgres/src/entities/: application.rs  attachment.rs  audit_log.rs  channel.rs  config.rs  emoji.rs  guild.rs  guild_template.rs  invite.rs  member.rs  message.rs  mod.rs  note.rs  read_state.rs  recipient.rs  relationship.rs  role.rs  sticker.rs  template.rs  user.rs  user_settings.rs  voice_state.rs  webhook.rs
chorus/examples/: gateway_simple.rs  login.rs
chorus/examples/voice_simple/src/: main.rs
chorus/src/: errors.rs  lib.rs  ratelimiter.rs
chorus/src/api/: instance.rs  mod.rs
chorus/src/api/auth/: mod.rs
chorus/src/api/channels/: messages.rs
chorus/src/api/guilds/: messages.rs
chorus/src/api/invites/: mod.rs
chorus/src/api/users/: channels.rs  users.rs
chorus/src/gateway/: gateway.rs  handle.rs  heartbeat.rs  message.rs  observers.rs  options.rs
chorus/src/gateway/backends/: mod.rs  wasm.rs
chorus/src/types/: mod.rs
chorus/src/types/config/: mod.rs
chorus/src/types/config/types/: guild_configuration.rs  register_configuration.rs  security_configuration.rs
chorus/src/types/config/types/subconfigs/email/: mod.rs
chorus/src/types/config/types/subconfigs/guild/: mod.rs
chorus/src/types/config/types/subconfigs/limits/: message.rs  mod.rs  rates.rs
chorus/src/types/config/types/subconfigs/register/: mod.rs
chorus/src/types/config/types/subconfigs/security/: mod.rs
chorus/src/types/database/: mod.rs
chorus/src/types/database/entities/: attachment.rs  config.rs  emoji.rs  guild.rs  guild_template.rs  invite.rs  note.rs  recipient.rs  role.rs  sticker.rs  template.rs  user.rs  voice_state.rs  webhook.rs
chorus/src/types/entities/: application.rs  auto_moderation.rs  connection.rs  emoji.rs  guild_member.rs  mfa_token.rs  ratelimits.rs  role.rs  stage_instance.rs  sticker.rs  template.rs  voice_state.rs
chorus/src/types/events/: auto_moderation.rs  interaction.rs  presence.rs  ready.rs  reconnect.rs  relationship.rs  request_members.rs  stage_instance.rs  webhooks.rs
chorus/src/types/events/voice_gateway/: client_connect.rs  identify.rs  select_protocol.rs
chorus/src/types/interfaces/: client_properties.rs  mod.rs
chorus/src/types/schema/: audit_log.rs  auth.rs  guild.rs  invites.rs  mfa.rs  mod.rs  relationship.rs  voice_state.rs
chorus/src/types/utils/: email.rs  jwt.rs  mod.rs  opcode.rs  regexes.rs
chorus/src/types/utils/events/: dispatchevent.rs  event.rs  mod.rs
chorus/src/voice/: crypto.rs  voice_data.rs
chorus/src/voice/gateway/backends/: mod.rs
chorus/src/voice/udp/: mod.rs
chorus/src/voice/udp/backends/: mod.rs
chorus/tests/: channels.rs  gateway.rs  instance.rs  types.rs  urlbundle.rs  user.rs  wasm.rs
examples/: gateway_observers.rs  gateway_simple.rs  instance.rs  login.rs
examples/voice_simple/: Cargo.toml
examples/voice_simple/src/: main.rs
scripts/: check-license-header.sh  test-wasm.sh
src/: client.rs  errors.rs  gateway.rs  http.rs  instance.rs  lib.rs  limit.rs  ratelimiter.rs  voice.rs  voice_udp.rs
src/api/: common.rs  instance.rs  mod.rs  schemas.rs  types.rs
src/api/auth/: login.rs  mod.rs  register.rs
src/api/channels/: attachments.rs  channels.rs  messages.rs  mod.rs  permissions.rs  reactions.rs
src/api/guilds/: guilds.rs  member.rs  messages.rs  mod.rs  roles.rs
src/api/invites/: mod.rs
src/api/policies/: mod.rs
src/api/users/: channels.rs  connections.rs  guilds.rs  mfa.rs  mod.rs  relationships.rs  users.rs
src/gateway/: backend_tungstenite.rs  events.rs  gateway.rs  handle.rs  heartbeat.rs  message.rs  mod.rs  observers.rs  options.rs
src/gateway/backends/: mod.rs  tungstenite.rs  wasm.rs
src/gateway/default/: gateway.rs  handle.rs  heartbeat.rs  message.rs  mod.rs
src/gateway/wasm/: gateway.rs  handle.rs  heartbeat.rs  mod.rs
src/types/: errors.rs  mod.rs
src/types/config/: mod.rs
src/types/entities/: application.rs  attachment.rs  audit_log.rs  auto_moderation.rs  channel.rs  config.rs  connection.rs  emoji.rs  guild.rs  guild_member.rs  harvest.rs  integration.rs  invite.rs  message.rs  mfa_token.rs  mod.rs  ratelimits.rs  relationship.rs  role.rs  security_key.rs  stage_instance.rs  sticker.rs  team.rs  template.rs  user.rs  user_settings.rs  voice_state.rs  webhook.rs
src/types/events/: application.rs  auto_moderation.rs  call.rs  channel.rs  guild.rs  heartbeat.rs  hello.rs  identify.rs  integration.rs  interaction.rs  invalid_session.rs  invite.rs  lazy_request.rs  message.rs  mfa.rs  mod.rs  passive_update.rs  presence.rs  ready.rs  reconnect.rs  relationship.rs  request_members.rs  (+8 more)
src/util/: errors.rs  mod.rs
src/voice/: crypto.rs  gateway.rs  handler.rs  mod.rs  udp.rs  voice_data.rs
tests/: auth.rs  channel.rs  channels.rs  gateway.rs  guild.rs  guilds.rs  instance.rs  integration.rs  invites.rs  member.rs  members.rs  message.rs  messages.rs  ratelimit.rs  relationships.rs  roles.rs  types.rs  urlbundle.rs  user.rs  wasm.rs
tests/common/: mod.rs
types/: lib.rs
types/config/: mod.rs
types/entities/: application.rs  attachment.rs  channel.rs  emoji.rs  guild.rs  guild_member.rs  integration.rs  message.rs  mod.rs  role.rs  security_key.rs  sticker.rs  team.rs  template.rs  user.rs  user_settings.rs  voice_state.rs  webhook.rs
types/events/: channel.rs  guild.rs  heartbeat.rs  hello.rs  identify.rs  message.rs  mod.rs  presence.rs  ready.rs  request_members.rs  resume.rs  thread.rs  user.rs  voice_status.rs
types/interfaces/: activity.rs  guild_welcome_screen.rs  interaction.rs  status.rs
types/schema/: channel.rs  guild.rs  message.rs  mod.rs
types/utils/: jwt.rs
(+162 files in other folders)
