[package]
name = "chorus"
description = "A library for interacting with multiple Spacebar-compatible Instances at once."
version = "0.19.0"
license = "MPL-2.0"
edition = "2021"
repository = "https://github.com/polyphony-chat/chorus"
readme = "README.md"
keywords = ["spacebar", "discord", "polyphony"]
website = ["https://discord.com/invite/m3FpcapGDD"]
rust-version = "1.71.1"


[features]
default = ["client", "rt-multi-thread"]
backend = ["poem", "sqlx", "sqlx-pg-uint"]
rt-multi-thread = ["tokio/rt-multi-thread"]
rt = ["tokio/rt"]
client = ["flate2"]
voice = ["voice_udp", "voice_gateway"]
voice_udp = ["dep:discortp", "dep:crypto_secretbox"]
voice_gateway = []
sqlx-pg-uint = ["dep:sqlx-pg-uint", "sqlx-pg-uint/serde"]

[dependencies]
tokio = { version = "1.43.1", features = ["macros", "sync"] }
serde = { version = "1.0.209", features = ["derive", "rc"] }
serde_json = { version = "1.0.127", features = ["raw_value"] }
serde-aux = "4.5.0"
serde_with = "3.9.0"
serde_repr = "0.1.19"
reqwest = { features = [
    "multipart",
    "json",
    "rustls-tls-webpki-roots",
], version = "=0.11.26", default-features = false }
url = "2.5.2"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.6"
custom_error = "1.9.2"
futures-util = "0.3.30"
http = "0.2.12"
base64 = "0.21.7"
bitflags = { version = "2.6.0", features = ["serde"] }
lazy_static = "1.5.0"
poem = { version = "3.0.1", features = ["multipart"], optional = true }
thiserror = "1.0.63"
jsonwebtoken = "8.3.0"
log = "0.4.22"
async-trait = "0.1.81"
chorus-macros = { path = "./chorus-macros", version = "0" } # Note: version here is used when releasing. This will use the latest release. Make sure to republish the crate when code in macros is changed!
sqlx = { version = "0.8.2", features = [
    "json",
    "chrono",
    "ipnetwork",
    "runtime-tokio-rustls",
    "postgres",
    "bigdecimal",
], optional = true }
discortp = { version = "0.5.0", optional = true, features = [
    "rtp",
    "discord",
    "demux",
] }
crypto_secretbox = { version = "0.1.1", optional = true }
rand = "0.8.5"
flate2 = { version = "1.0.33", optional = true }
webpki-roots = "0.26.3"
pubserve = { version = "1.1.0", features = ["async", "send"] }
sqlx-pg-uint = { version = "0.9.0", features = ["serde"], optional = true }

# Note: this does not another dependency when compiling, since many other dependencies (reqwest, http, sqlx, tokio_tungstenite, ...) also depend on the same version
#
# This was included to be able to return bytes from reqwest for fetching different file types
bytes = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustls = "0.23.20"
tokio-tungstenite = { version = "0.26.1", features = [
    "rustls-tls-webpki-roots",
] }
hostname = "0.3.1"
getrandom = { version = "0.2.15" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
ws_stream_wasm = "0.7.4"
pharos = "0.5.3" # This is a dependency of ws_stream_wasm, we are including it to interface with that library
wasm-bindgen-futures = "0.4.43"
wasmtimer = "0.4.0"

[dev-dependencies]
lazy_static = "1.5.0"
wasm-bindgen-test = "0.3.43"
wasm-bindgen = "0.2.95"
simple_logger = { version = "5.0.0", default-features = false }
tokio-test = "0.4.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
httptest = "0.16.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }

# See https://github.com/whizsid/wasmtimer-rs/issues/18#issuecomment-2420144039
[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = false
