[package]
name = "chorus-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
bigdecimal = "0.4.8"
chorus = { version = "0.19.0", path = "../chorus", features = [
    "backend",
], default-features = false }
chrono = "0.4.40"
futures = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
log = "0.4.27"
num-traits = "0.2.19"
pubserve = "1.1.0"
rand = "0.8.5"
serde = "1.0.219"
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
sqlx = "0.8.3"
sqlx-pg-uint = { version = "0.9.0", features = ["serde"] }
tokio = { version = "1.44.2", features = ["sync"] }
